new tests for travis / WIP

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,5 @@
----
 fixtures:
   repositories:
-    inifile: https://github.com/puppetlabs/puppetlabs-inifile
+    inifile: "https://github.com/puppetlabs/puppetlabs-inifile"
   symlinks:
     influxdb: "#{source_dir}"
