--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,4 +2,4 @@ fixtures:
   repositories:
     inifile: "https://github.com/puppetlabs/puppetlabs-inifile"
   symlinks:
-    influxdb: "#{source_dir}"
+    telegraf: "#{source_dir}"
