--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,13 @@ env:
   - PUPPET_VERSION="~> 3.5.0"
   - PUPPET_VERSION="~> 3.6.0"
   - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes
-  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
   - PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes
-  - PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
   - PUPPET_VERSION="~> 4.0.0" STRICT_VARIABLES=yes
   - PUPPET_VERSION="~> 4.1.0" STRICT_VARIABLES=yes
 matrix:
   allow_failures:
-    - env: PUPPET_VERSION="~> 4.0.0" STRICT_VARIABLES=yes
-    - env: PUPPET_VERSION="~> 4.1.0" STRICT_VARIABLES=yes
+    - env: PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
+    - env: PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
 notifications:
   email:
     - roman@plessl.info
