--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,7 @@
 fixtures:
   repositories:
-    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
+    apt: 'git://github.com/puppetlabs/puppetlabs-apt.git'
+    stdlib: 'https://github.com/puppetlabs/puppetlabs-stdlib.git'
+    wget: 'git://github.com/maestrodev/puppet-wget.git'
   symlinks:
     telegraf: "#{source_dir}"
