--- a/spec/acceptance/nodesets/ubuntu1404.yml
+++ b/spec/acceptance/nodesets/ubuntu1404.yml
@@ -10,9 +10,8 @@ HOSTS:
     docker_preserve_image: true
     docker_cmd: '["/sbin/init"]'
     docker_image_commands:
+      - 'apt-get install -y wget'
       - 'locale-gen en_US.UTF-8'
-
 CONFIG:
-  masterless: true
-  log_level: verbose
-  type: git
+  type: foss
+  log_level: debug
